add comments to unet starter

--- a/UNet starter kernel (Pytorch) LB_0.88.ipynb
+++ b/UNet starter kernel (Pytorch) LB_0.88.ipynb
@@ -103,22 +103,22 @@
     "    runs[1::2] -= runs[::2]\n",
     "    return ' '.join(str(x) for x in runs)\n",
     "\n",
-    "def make_mask(row_id, df):\n",
+    "def make_mask(row_id, df): #row_idはint\n",
     "    '''Given a row index, return image_id and mask (256, 1600, 4) from the dataframe `df`'''\n",
     "    fname = df.iloc[row_id].name #ilocはseriesを返し、そのseriesのnameはもとの行のindex\n",
-    "    labels = df.iloc[row_id][:4] #defectsを除いたseries\n",
+    "    labels = df.iloc[row_id][:4] #defectsを除いたseries(もとのdfは成分が5つ)\n",
     "    masks = np.zeros((256, 1600, 4), dtype=np.float32) # float32 is V.Imp(←what is V.Imp) \n",
     "    # 4:class 1～4 (ch:0～3)\n",
     "\n",
     "    for idx, label in enumerate(labels.values): #labels.valuesは1×4のnp.arrayで要素はencoded pixels\n",
-    "        if label is not np.nan:\n",
+    "        if label is not np.nan: #labelはこの画像のあるクラスのencoded pixels\n",
     "            label = label.split(\" \") #一つのクラスのencoded pixelsを縦にひたすら並べたやつ\n",
     "            positions = map(int, label[0::2])\n",
     "            length = map(int, label[1::2])\n",
     "            mask = np.zeros(256 * 1600, dtype=np.uint8) #これは一次元配列\n",
     "            for pos, le in zip(positions, length):\n",
     "                mask[pos:(pos + le)] = 1 #傷あるところを1にしてmask\n",
-    "            masks[:, :, idx] = mask.reshape(256, 1600, order='F') #order=\"F\"にして一次元配列を縦に並べていく\n",
+    "            masks[:, :, idx] = mask.reshape(256, 1600, order='F') #order=\"F\"(要素を縦に並べる)にして一次元配列を256×1600の二次元配列に\n",
     "    return fname, masks"
    ]
   },
@@ -169,7 +169,7 @@
     "        )\n",
     "    list_transforms.extend(\n",
     "        [\n",
-    "            Normalize(mean=mean, std=std, p=1), #meanを引いてstdで割る(?)\n",
+    "            Normalize(mean=mean, std=std, p=1), \n",
     "            ToTensor(),\n",
     "        ]\n",
     "    )\n",
@@ -229,7 +229,7 @@
     "    return preds\n",
     "\n",
     "def metric(probability, truth, threshold=0.5, reduction='none'):\n",
-    "    '''Calculates dice of positive and negative images seperately''' #陽性陰性のpositive,negative(?)\n",
+    "    '''Calculates dice of positive and negative images seperately''' #陽性陰性のpositive,negative\n",
     "    '''probability and truth must be torch tensors'''\n",
     "    batch_size = len(truth) #truthはbatch_size×4×256×1600なのでlenはbatch_size\n",
     "    with torch.no_grad():\n",
@@ -269,7 +269,7 @@
     "class Meter:\n",
     "    '''A meter to keep track of iou and dice scores throughout an epoch'''\n",
     "    def __init__(self, phase, epoch):\n",
-    "        self.base_threshold = 0.5 # <<<<<<<<<<< here's the threshold\n",
+    "        self.base_threshold = 0.5 # <<<<<<<<<<< here's the threshold >>>>>>>>>>\n",
     "        self.base_dice_scores = []\n",
     "        self.dice_neg_scores = []\n",
     "        self.dice_pos_scores = []\n",
@@ -314,12 +314,12 @@
     "        union = np.logical_or(pred_c, label_c).sum()\n",
     "        if union != 0:\n",
     "            ious.append(intersection / union) #IoUを計算\n",
-    "    return ious if ious else [1] # if iousとは,iousが空なら[1]を返す?\n",
+    "    return ious if ious else [1] # if iousとは?iousが空なら[1]を返す?\n",
     "\n",
     "def compute_iou_batch(outputs, labels, classes=None): #これについても画像ごとではなくて画像のさらに1クラスごとにやるべき?\n",
     "    '''computes mean iou for a batch of ground truth masks and predicted masks'''\n",
     "    ious = []\n",
-    "    preds = np.copy(outputs) # copy is imp(impとは),np.shape(batch_size,4,256,1600)\n",
+    "    preds = np.copy(outputs) # copy is imp(impとは),np.shapeは(batch_size,4,256,1600)\n",
     "    labels = np.array(labels) # tensor to np, labelsは正解のmask\n",
     "    for pred, label in zip(preds, labels): #pred,labelのshapeは(4,256,1600)\n",
     "        ious.append(np.nanmean(compute_ious(pred, label, classes))) #np.nanmeanはnanを除外した平均\n",
@@ -388,7 +388,7 @@
     "        self.device = torch.device(\"cuda:0\")\n",
     "        torch.set_default_tensor_type(\"torch.cuda.FloatTensor\")\n",
     "        self.net = model\n",
-    "        self.criterion = torch.nn.BCEWithLogitsLoss() #loss_funcはあるやつを使う(diceにしちゃう?)こいつは内部的にsigmoidを挟んでる?\n",
+    "        self.criterion = torch.nn.BCEWithLogitsLoss() #loss_funcはあるやつを使う(diceにしちゃうとどうなる?)こいつは内部的にsigmoidを挟んでる?\n",
     "        self.optimizer = optim.Adam(self.net.parameters(), lr=self.lr)\n",
     "        self.scheduler = ReduceLROnPlateau(self.optimizer, mode=\"min\", patience=3, verbose=True)\n",
     "        self.net = self.net.to(self.device)\n",
@@ -428,7 +428,7 @@
     "#         tk0 = tqdm(dataloader, total=total_batches)\n",
     "        self.optimizer.zero_grad()\n",
     "        for itr, batch in enumerate(dataloader): # replace `dataloader` with `tk0` for tqdm\n",
-    "            images, targets = batch #imagesはbatch_size×1×256×1600(grayscale?),targetsはbatch_size×4×256×1600(多分)\n",
+    "            images, targets = batch #imagesはbatch_size×1(3?)×256×1600,targetsはbatch_size×4×256×1600(多分)\n",
     "            loss, outputs = self.forward(images, targets)\n",
     "            loss = loss / self.accumulation_steps\n",
     "            if phase == \"train\":\n",
@@ -565,7 +565,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
